<resources>
    <string name="app_name">HAPP DanaR driver</string>
    <string name="action_settings">Settings</string>

    <string name="action_preferences">Preferences</string>
    <string name="action_readstatus">Read status</string>
    <string name="action_testhappconnectivity">Test HAPP connectivity</string>
    <string name="action_restartnsclient">Restart NS client</string>
    <string name="action_exit">Exit</string>

    <string name="title_activity_preferences">Preferences</string>
    <string name="danar_enable_title">Enable</string>
    <string name="danar_enable_summary">Enable reading statuses and sending commands to pump</string>
    <string name="danar_btdevice">DanaR Bluetooth Device</string>
    <string name="ns_api_title">Nightscout connection</string>
    <string name="ns_enable_title">Connect to Nightscout</string>
    <string name="ns_url_title">Nightscout URL</string>
    <string name="ns_url_dialogtitle">Enter your Nightscout URL</string>
    <string name="ns_url_dialogmessage">This only the base URL</string>
    <string name="ns_api_secret_title">Nightscout API secret</string>
    <string name="ns_api_secret_dialogtitle">Enter your Nightscout API_SECRET</string>
    <string name="ns_api_secret_dialogmessage">API_SECRET on the server should match yourpassphrase in this setting.</string>
    <string name="ns_sync_profile">Send active profile to pump</string>
    <string name="ns_emulate_xdrip">Emulate xDrip</string>
    <string name="ns_emulate_xdrip_summary">Send broadcasts based on incomming data from NS</string>
    <string name="safety_title">Safety</string>
    <string name="safety_bolusrate_title">Maximum bolus rate</string>
    <string name="safety_bolusrate_summary">Allow maximum 1 remote bolus per 60 min</string>
    <string name="safety_bolusrate_dialogtitle">Max bolus rate</string>
    <string name="safety_bolusrate_dialogmessage">Enter value in minutes</string>
    <string name="safety_basalrate_title">Maximum temp basal rate</string>
    <string name="safety_basalrate_summary">Maximum allowed temporary basal rate 1U/h</string>
    <string name="safety_basalrate_dialogtitle">Maximum temp basal rate</string>
    <string name="safety_basalrate_dialogmessage">Enter value in U/h</string>

</resources>
